# hallucinator

./: README.md  app.py  check_hallucinated_references.py  pyproject.toml
templates/: index.html
