[project]
name = "hallucinator"
version = "0.1.0"
description = "Detects potentially fabricated references in academic PDF papers"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "rapidfuzz>=3.0.0",
    "feedparser>=6.0.0",
    "PyMuPDF>=1.23.0",
    "flask>=3.0.0",
]

[project.scripts]
hallucinator = "check_hallucinated_references:main"
